--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Mi Sitio Web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Mi Sitio Web</title>
 </head>
+
 <body>
-  <header>
-    <h1>Bienvenido a Mi Sitio Web</h1>
-  </header>
-  <section>
-    <p>Esta es una página web simple.</p>
-  </section>
-  <footer>
-    <p>&copy; 2023 Mi Sitio Web</p>
-  </footer>
+    <header>
+        <h1>Bienvenido a Mi Sitio Web</h1>
+        <p>
+            Locaso esta wea xdd
+        </p>
+    </header>
+    <section>
+        <p>Esta es una página web simple.</p>
+    </section>
+    <footer>
+        <p>&copy; 2023 Mi Sitio Web</p>
+    </footer>
 </body>
+
 </html>
